fixed layout issue with refinement\

--- a/app/webroot/css/multi_sankey_intersection.css
+++ b/app/webroot/css/multi_sankey_intersection.css
@@ -7,6 +7,10 @@
     justify-content: space-between;
 }
 
+#choices:last-child  {
+    margin-right:50px;
+}
+
 .node rect {
   cursor: move;
   fill-opacity: .9;
